# quadnoobtrainer

./: README.md
Box2D/: CMakeLists.txt
Box2D/Box2D/Dynamics/: b2World.cpp
Box2D/Testbed/: CMakeLists.txt  CMakeLists.txt~
Box2D/Testbed/Framework/: Main.cpp  Render.cpp  Test.cpp  Test.h
Box2D/Testbed/Tests/: Calibration.cpp  Calibration.h  LateralControl.h  PIDController.cpp  PIDController.h  PIDTuning.h  PIDTuning2.h  TestEntries.cpp  ThrottleControl.h  ThrottleLateralControl.h  quad.cpp  quad.h  trainersimTest.h
Box2D/freeglut/GL/: freeglut_ext.h
